bk_ida/gccida/g2/init_timevar
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_timevar/src/timevar.c:708:37: error: use of undeclared identifier 'off_6FF33C'
timevars[14].name = ( const char *)&off_6FF33C; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_timevar/src/timevar.c:709:37: error: use of undeclared identifier 'unk_6FF335'
timevars[15].name = ( const char *)&unk_6FF335; 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_timevar/src/obj/timevar.o] Error 1
